[package]
name = "raft"
version = "0.1.0"
description = "Implementation of the rust consensus algorithm"
authors = ["Tumukunde Arnold <tumukundearnold@gmail.com>"]
edition = "2021"
license-file = "LICENSE.txt"
keywords = ["raft"]
readme = "README.md"
repository = "https://github.com/sirrwema/raft.git"
exclude = [
    '*.hpp',
    '*.cpp',
    'CMakeList.txt',
]

[dependencies]
futures = "0.3"
rand = "0.7"
thiserror = "1.0"
serde_json = '1.0'

[dev-dependencies]
structopt = "0.3"
maplit = "1.0"

